workloads/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
  - name: http
    port: 8081
    targetPort: 80
  selector:
    app: nginx
