workloads/dashboard-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    # traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: traefik.local
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          # servicePort: 443
          servicePort: 8001
