workloads/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  # - host: traefik.local
  #   http:
  - http:
      paths:
      # - path: /
      - path: /dashboard
        backend:
          serviceName: kubernetes-dashboard
          # servicePort: 443
          servicePort: 8001
      - path: /nginx
        backend:
          serviceName: nginx-service
          # servicePort: http
          servicePort: 8081
          # servicePort: 31765
