workloads/nginx-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    # traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /
      # - path: /nginx
        backend:
          serviceName: nginx-service
          servicePort: http
          servicePort: 8081
          # servicePort: 31765
